apply material-ui to eventsIndex

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .ytp-title-channel-logo{
+  display : none;
+}
+.ytp-watch-later-icon{
+  display: none;
+}
+
+td{
+  font-size:90px;
+} */
